--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Cardline</string>
+    <string name="newsfeed">뉴스피드</string>
+    <string name="studio">스튜디오</string>
+    <string name="my_editor_page">내 에디터 페이지</string>
+    <string name="more_settings">더보기</string>
+    <string name="information">정보</string>
+    <string name="alert">알림</string>
+    <string name="favorite_list">즐겨찾기 목록</string>
+    <string name="settings">설정</string>
 </resources>
