[Fix] Launch chrome instead of webview when facebook app is missing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="facebook_app_id">841107499390440</string>
+    <string name="fb_login_protocol_scheme">fb841107499390440</string>
     <string name="app_name">Cardline</string>
     <string name="newsfeed">뉴스피드</string>
     <string name="studio">스튜디오</string>
